Moving around detail view fields (XIB)

--- a/LeftoverSwap/LSPostDetailViewController.xib
+++ b/LeftoverSwap/LSPostDetailViewController.xib
@@ -122,7 +122,7 @@
 							<object class="IBUITextView" id="672617713">
 								<reference key="NSNextResponder" ref="891679762"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 366}, {280, 128}}</string>
+								<string key="NSFrame">{{20, 366}, {280, 80}}</string>
 								<reference key="NSSuperview" ref="891679762"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="988567752"/>
@@ -130,7 +130,6 @@
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIScrollEnabled">NO</bool>
 								<bool key="IBUIEditable">NO</bool>
 								<object class="NSMutableString" key="IBUIText">
 									<characters key="NS.bytes">Description: Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</characters>
@@ -152,7 +151,7 @@
 							<object class="IBUILabel" id="887321619">
 								<reference key="NSNextResponder" ref="891679762"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 337}, {44, 21}}</string>
+								<string key="NSFrame">{{20, 337}, {130, 21}}</string>
 								<reference key="NSSuperview" ref="891679762"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="231548013"/>
@@ -173,7 +172,7 @@
 							<object class="IBUILabel" id="231548013">
 								<reference key="NSNextResponder" ref="891679762"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{236, 337}, {64, 21}}</string>
+								<string key="NSFrame">{{204, 337}, {96, 21}}</string>
 								<reference key="NSSuperview" ref="891679762"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="672617713"/>
@@ -195,9 +194,10 @@
 							<object class="IBUIButton" id="988567752">
 								<reference key="NSNextResponder" ref="891679762"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 502}, {280, 44}}</string>
+								<string key="NSFrame">{{20, 454}, {280, 44}}</string>
 								<reference key="NSSuperview" ref="891679762"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -481,7 +481,7 @@
 						<int key="objectID">5</int>
 						<reference key="object" ref="891679762"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="639566970">
+							<object class="IBNSLayoutConstraint" id="174321579">
 								<reference key="firstItem" ref="891679762"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -489,7 +489,7 @@
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">3</double>
+									<double key="value">51</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="891679762"/>
@@ -871,7 +871,7 @@
 						<int key="objectID">60</int>
 						<reference key="object" ref="672617713"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="1073152019">
+							<object class="IBNSLayoutConstraint" id="684198953">
 								<reference key="firstItem" ref="672617713"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -879,7 +879,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">128</double>
+									<double key="value">80</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="672617713"/>
@@ -889,11 +889,6 @@
 							</object>
 						</array>
 						<reference key="parent" ref="891679762"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">64</int>
-						<reference key="object" ref="1073152019"/>
-						<reference key="parent" ref="672617713"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">67</int>
@@ -924,7 +919,7 @@
 						<int key="objectID">87</int>
 						<reference key="object" ref="887321619"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="89937979">
+							<object class="IBNSLayoutConstraint" id="751980048">
 								<reference key="firstItem" ref="887321619"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -932,7 +927,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">44</double>
+									<double key="value">130</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="887321619"/>
@@ -975,14 +970,26 @@
 						<reference key="parent" ref="887321619"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">91</int>
-						<reference key="object" ref="89937979"/>
-						<reference key="parent" ref="887321619"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">92</int>
 						<reference key="object" ref="231548013"/>
-						<array class="NSMutableArray" key="children"/>
+						<array class="NSMutableArray" key="children">
+							<object class="IBNSLayoutConstraint" id="573096359">
+								<reference key="firstItem" ref="231548013"/>
+								<int key="firstAttribute">7</int>
+								<int key="relation">0</int>
+								<nil key="secondItem"/>
+								<int key="secondAttribute">0</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">96</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="231548013"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">1</int>
+							</object>
+						</array>
 						<reference key="parent" ref="891679762"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1003,21 +1010,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">99</int>
 						<reference key="object" ref="526033005"/>
-						<reference key="parent" ref="891679762"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">100</int>
-						<reference key="object" ref="362326463"/>
-						<reference key="parent" ref="891679762"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">101</int>
-						<reference key="object" ref="639566970"/>
-						<reference key="parent" ref="891679762"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">102</int>
-						<reference key="object" ref="119091048"/>
 						<reference key="parent" ref="891679762"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1072,6 +1064,36 @@
 						<reference key="object" ref="1068603911"/>
 						<reference key="parent" ref="331810083"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">135</int>
+						<reference key="object" ref="684198953"/>
+						<reference key="parent" ref="672617713"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">139</int>
+						<reference key="object" ref="362326463"/>
+						<reference key="parent" ref="891679762"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">140</int>
+						<reference key="object" ref="174321579"/>
+						<reference key="parent" ref="891679762"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">141</int>
+						<reference key="object" ref="751980048"/>
+						<reference key="parent" ref="887321619"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">143</int>
+						<reference key="object" ref="119091048"/>
+						<reference key="parent" ref="891679762"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">144</int>
+						<reference key="object" ref="573096359"/>
+						<reference key="parent" ref="231548013"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1095,9 +1117,6 @@
 					<reference ref="824237372"/>
 				</array>
 				<boolean value="NO" key="10.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
-				<string key="100.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="101.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="105.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="105.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="106.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1108,6 +1127,12 @@
 				<string key="113.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="115.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="116.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="135.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="139.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="140.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="141.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="143.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="144.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1137,15 +1162,14 @@
 					<reference ref="967642593"/>
 					<reference ref="898931439"/>
 					<reference ref="362326463"/>
-					<reference ref="639566970"/>
+					<reference ref="174321579"/>
 				</array>
 				<boolean value="NO" key="5.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="60.IBViewMetadataConstraints">
-					<reference ref="1073152019"/>
+					<reference ref="684198953"/>
 				</array>
 				<boolean value="NO" key="60.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
-				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="70.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1154,17 +1178,19 @@
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="75.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="87.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="87.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="87.IBViewMetadataConstraints">
 					<reference ref="785578532"/>
-					<reference ref="89937979"/>
+					<reference ref="751980048"/>
 				</array>
 				<boolean value="NO" key="87.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="88.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="89.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="90.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="91.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="92.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<array class="NSMutableArray" key="92.IBViewMetadataConstraints">
+					<reference ref="573096359"/>
+				</array>
 				<boolean value="NO" key="92.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="95.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="96.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1175,7 +1201,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">129</int>
+			<int key="maxID">144</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
